--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Content with notebooks\n",
+    "# Content with notebooks test\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
